# telepath

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: error.rs  framing.rs  lib.rs  packet.rs  protocol.rs
host/: Cargo.toml
host/src/: app.rs  audio.rs  main.rs  net.rs
plugin/: Cargo.toml
plugin/src/: config.rs  editor.rs  lib.rs  net.rs  params.rs
receiver/: Cargo.toml
receiver/src/: app.rs  audio.rs  main.rs  net.rs
xtask/: Cargo.toml
