[package]
name = "telepath-plugin"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib  = the actual VST3/CLAP .so
# lib     = lets xtask introspect the crate for bundling
crate-type = ["cdylib", "lib"]

[dependencies]
common      = { path = "../common" }
nih_plug    = { workspace = true }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
parking_lot = { workspace = true }
ringbuf     = { workspace = true }
tokio       = { workspace = true }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
